--- a/src/main/resources/templates/adminPages/contactsList.html
+++ b/src/main/resources/templates/adminPages/contactsList.html
@@ -4,7 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{adminLayout/layout}">
-<th:block layout:fragment="title">News List</th:block>
+<th:block layout:fragment="title" th:text="#{general.label.inbox}"></th:block>
 <th:block layout:fragment="content">
 
  
