--- a/src/main/resources/templates/adminPages/newsList.html
+++ b/src/main/resources/templates/adminPages/newsList.html
@@ -21,7 +21,7 @@
 			<tr th:each="news : ${news}">
 				<td th:text="${news.title}"></td>
 				<td th:text="${news.author.firstName}"></td>
-				<td th:text="${news.createDate}"></td>
+				<td th:text="${#dates.format(news.createDate, 'dd MMMM yyyy')}"></td>
  				<td>
 					<a th:href="@{'/admin/news/edit/'+ ${news.id}}" style="border:none" class="mr-1"><i class="fas fa-pencil-alt"></i></a>
 					<a th:href="@{'/admin/news/delete/'+ ${news.id}}" style="border:none" class="ml-1" onclick="return confirm('Are you sure !');"><i class="fas fa-trash"></i></a>
