--- a/src/main/resources/templates/adminPages/lessonsList.html
+++ b/src/main/resources/templates/adminPages/lessonsList.html
@@ -13,6 +13,7 @@
 			<tr>
 				<th th:text="#{general.label.title}"></th>
 				<th th:text="#{general.label.author}"></th>
+				<th th:text="#{general.label.categoryName}"></th>
 				<th th:text="#{general.label.createDate}"></th>
  				<th th:text="#{general.label.action}"></th>
 			</tr>
@@ -21,6 +22,7 @@
 			<tr th:each="lesson : ${lessons}">
 				<td th:text="${lesson.title}"></td>
 				<td th:text="${lesson.author.firstName}"></td>
+				<td th:text="${lesson.category.categoryName}"></td>
 				<td th:text="${#dates.format(lesson.date, 'dd MMMM yyyy')}"></td>
  				<td>
 					<a th:href="@{'/admin/lessons/edit/'+ ${lesson.id}}" style="border:none" class="mr-1"><i class="fas fa-pencil-alt"></i></a>
