--- a/src/main/resources/templates/adminPages/newsEdit.html
+++ b/src/main/resources/templates/adminPages/newsEdit.html
@@ -3,6 +3,7 @@
 	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
+<title th:text="#{general.label.newsEdit}"></title>
   <meta charset="UTF-8">
   <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script> 
