yeni title eklendi

--- a/src/main/resources/templates/blogPages/about.html
+++ b/src/main/resources/templates/blogPages/about.html
@@ -4,7 +4,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{blogLayout/layout}">
-<th:block layout:fragment="title" th:text="#{general.label.aboutMe}"></th:block>
+<th:block layout:fragment="title" th:text="'Denizcan Demir - ' +#{general.label.aboutMe}"></th:block>
 <th:block layout:fragment="content">
 
 <p id="metin" class="mt-3"></p>
