profil resmi resource altına alındı

--- a/src/main/resources/templates/adminLayout/sidebar.html
+++ b/src/main/resources/templates/adminLayout/sidebar.html
@@ -17,7 +17,7 @@
 				
 									<div style="width: 50%; margin: auto;">
 										<img style="border-radius: 50%;" class="card-img"
-											src="https://avatars2.githubusercontent.com/u/32747214?s=460&v=4"
+											src="/images/profil.jpeg"
 											alt="Card image cap">
 									</div>
 									<div>
