--- a/src/main/resources/templates/blogLayout/sidebar.html
+++ b/src/main/resources/templates/blogLayout/sidebar.html
@@ -15,7 +15,7 @@
 								<section id="search" class="alt">
 									<div style="width: 50%; margin: auto;">
 										<img style="border-radius: 50%;" class="card-img"
-											src="https://avatars2.githubusercontent.com/u/32747214?s=460&v=4"
+											src="/images/profil.jpeg"
 											alt="Card image cap">
 									</div>
 									<div>
