blob iptal edildi

--- a/src/main/resources/templates/adminPages/lessonsAdd.html
+++ b/src/main/resources/templates/adminPages/lessonsAdd.html
@@ -20,8 +20,7 @@
 		 	<option value="" th:text="#{general.label.selectCategory}"></option>
 		 	<option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.categoryName}"></option>
 		 </select>
-		 <label for="m1">Header Image</label>
-		 <input id="m1" type="file" name="images" class="form-control form-group" required="required" accept="image/x-png,image/gif,image/jpeg"> 
+		 <input type="text" th:field="${lesson.image}" class="form-control form-group" required="required" > 
 		 <textarea id="summernote" name="editordata" th:field="${lesson.content}"></textarea>
 		 <input  type="submit" th:value="#{general.label.save}" class="btn btn-danger  form-group">
 		 <input  type="reset" th:value="#{general.label.clear}" class="btn btn-warning  form-group ">
