--- a/src/main/resources/templates/adminPages/newsEdit.html
+++ b/src/main/resources/templates/adminPages/newsEdit.html
@@ -17,11 +17,9 @@
   		 <input type="hidden" th:field="${news.createDate}">
 		 <input type="hidden" th:field="${news.author}">
 		 <input type="hidden" th:field="${news.id}">
-		 <input type="hidden" th:field="${news.image}">
 		 <input type="text" th:field="${news.title}" class="form-control form-group" th:placeholder="#{general.label.title}" style="margin-top:10px;">
 		 <input type="text" th:field="${news.description}" class="form-control form-group" th:placeholder="#{general.label.description}">
-		 <label for="m1">Header Image</label>
-		 <input id="m1" type="file" name="images" class="form-control form-group" accept="image/x-png,image/gif,image/jpeg"> 
+		 <input type="text" th:field="${news.image}" class="form-control form-group" required="required"> 
 		 <textarea id="summernote" name="editordata" th:field="${news.content}"></textarea>
 		 <input  type="submit" th:value="#{general.label.save}" class="btn btn-danger  form-group">
 		 <input  type="reset" th:value="#{general.label.clear}" class="btn btn-warning  form-group ">
