--- a/src/main/resources/templates/adminPages/aboutEdit.html
+++ b/src/main/resources/templates/adminPages/aboutEdit.html
@@ -1,56 +1,38 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-	xmlns:th="http://www.thymeleaf.org">
-	<title th:text="#{general.label.aboutMe}"></title>
+	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+	  xmlns:th="http://www.thymeleaf.org">
 <head>
-	
-	<!-- Include external CSS. -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css">
-	
-	<!-- Include Editor style. -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/css/froala_style.min.css" rel="stylesheet" type="text/css" />
-
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+<title th:text="#{general.label.lessonEdit}"></title>
+  <meta charset="UTF-8">
+  <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.css" rel="stylesheet">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script> 
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.js"></script> 
+  <link href="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.css" rel="stylesheet">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote.js"></script>
 </head>
-<body class="bg-light">
- 
-	<div class="container">
-	
-	<form th:action="@{/admin/about}" method="post" th:object="${about}" enctype="multipart/form-data" >
-		 <textarea th:field="${about.content}"></textarea>
+<body style="background-color: #f8f9fa;">
+  <div class="container">
+  	<form th:action="@{/admin/about}" method="post" th:object="${about}" enctype="multipart/form-data" class="form-group">
 		 <input type="hidden" th:field="${about.id}">
-		 
-		 <input  type="submit" th:value="#{general.label.save}" class="btn btn-danger  mt-3 mb-3">
-		 <input  type="reset" th:value="#{general.label.clear}" class="btn btn-warning  mt-3 mb-3 ">
-		 <a  th:href="@{/admin/home}" class="pull-right btn btn-success mt-3 mb-3" th:text="#{general.label.back}"></a> 
+		 <textarea id="summernote" name="editordata" th:field="${about.content}"></textarea>
+		 <input  type="submit" th:value="#{general.label.save}" class="btn btn-danger  form-group">
+		 <input  type="reset" th:value="#{general.label.clear}" class="btn btn-warning  form-group ">
+		 <a  th:href="@{/admin/lessons/list}" class="pull-right btn btn-success form-group" th:text="#{general.label.back}"></a> 
 	 </form>
 	 
-	 <form id="upload-file-form" th:action=@{/uploadFile} method="post" enctype="multipart/form-data">
-		<label for="upload-file-input">Context Image</label>
-	  	<input id="upload-file-input" type="file" class="form-control pb-5" name="uploadfile" accept="image/x-png,image/gif,image/jpeg" />
-	 </form>
+	<form id="upload-file-form" th:action=@{/uploadFile} method="post" enctype="multipart/form-data" class="form-group">
+	<label for="upload-file-input" class="form-group">Context Image</label>
+	   <input id="upload-file-input" type="file" class="form-control form-group" name="uploadfile" accept="image/x-png,image/gif,image/jpeg" />
+	</form>
 	
 	<div class="alert-primary" id="imageUrl"></div>
-	 
-	</div>
-	
-	
-	
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/xml/xml.min.js"></script>
- 
-    <!-- Include Editor JS files. -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/froala-editor/2.8.4/js/froala_editor.pkgd.min.js"></script>
- 
-    <!-- Initialize the editor. -->
-    <script> $(function() { $('textarea').froalaEditor() }); </script>
 	<script type="text/javascript" src="/js/imageupload.js"></script>	
-
-   
+</div>
+  <script>
+    $(document).ready(function() {
+        $('#summernote').summernote();
+    });
+  </script>
 </body>
 </html>
