--- a/src/main/resources/templates/blogLayout/header.html
+++ b/src/main/resources/templates/blogLayout/header.html
@@ -9,7 +9,7 @@
 
 	<div layout:fragment="header">
 		<header id="header">
-			<a href="#" class="logo"><i class="fab fa-java fa-2x"></i> <strong> Write once, run anywhere . . .</strong> </a>
+			<a th:href="@{/}" class="logo"><i class="fab fa-java fa-2x"></i> <strong> Write once, run anywhere . . .</strong> </a>
 			<ul class="icons">
 				<li><a href="https://www.linkedin.com/in/denizcandmr" class="icon fab fa-linkedin"><span class="label">Linkedin</span></a></li>
 				<li><a href="https://github.com/DnzDmR" class="icon fab fa-github-alt"><span class="label">Github</span></a></li>
