--- a/src/main/resources/templates/adminPages/newsEdit.html
+++ b/src/main/resources/templates/adminPages/newsEdit.html
@@ -19,7 +19,7 @@
 		 <input type="hidden" th:field="${news.id}">
 		 <input type="text" th:field="${news.title}" class="form-control form-group" th:placeholder="#{general.label.title}" style="margin-top:10px;">
 		 <input type="text" th:field="${news.description}" class="form-control form-group" th:placeholder="#{general.label.description}">
-		 <input type="text" th:field="${news.image}" class="form-control form-group" required="required"> 
+		 <input type="text" th:field="${news.image}" class="form-control form-group" required="required" th:placeholder="#{general.label.mainImage}"> 
 		 <textarea id="summernote" name="editordata" th:field="${news.content}"></textarea>
 		 <input  type="submit" th:value="#{general.label.save}" class="btn btn-danger  form-group">
 		 <input  type="reset" th:value="#{general.label.clear}" class="btn btn-warning  form-group ">
