hardcoded ifadeler duzenlendi

--- a/src/main/resources/templates/blogPages/contact.html
+++ b/src/main/resources/templates/blogPages/contact.html
@@ -30,6 +30,6 @@
 		</div>
  	</div>
 </form>
-<div th:if="${message}" th:text="${message}" class="alert alert-warning col-md-12">d</div>
+<div th:if="${message}" th:text="#{${message}}" class="alert alert-warning col-md-12">d</div>
 </th:block>
 </html>
